Noteworthy changes in release ?.? (????-??-??)
==============================================

* Improvements
  * Added -n/--syscall-number option for printing syscall numbers.

* Bug fixes

Noteworthy changes in release 5.8 (2020-08-06)
==============================================

* Changes in behaviour
  * Modified %process class to contain system calls associated with
    process lifecycle (creation, exec, termination):
    kill, tkill, tgkill, pidfd_send_signal and rt_sigqueueinfo are added,
    arch_prctl and unshare are removed.

* Improvements
  * Implemented decoding of faccessat2 syscall.
  * Implemented decoding of LOOP_CONFIGURE ioctl command.
  * Updated decoding of io_uring_setup syscall to match Linux 5.8.
  * Updated lists of AUDIT_*, BPF_*, CAP_*, ETH_*, INET_DIAG_*, IORING_*,
    KEYCTL_*, KVM_*, LOOP_*, NDA_*, RTC_*, TCA_*, STATX_*, and *_MAGIC
    constants.
  * Updated lists of ioctl commands from Linux 5.8.

* Bug fixes
  * Added statx syscall to %fstat trace class.

Noteworthy changes in release 5.7 (2020-06-01)
==============================================

* Improvements
  * Implemented interval specification in "when=" subexpression of syscall
    tampering expressions.
  * Added -e trace=%clock option for tracing syscalls reading of modifying
    system clocks.
  * Implemented decoding of BPF_LINK_CREATE and BPF_LINK_UPDATE bpf
    syscall commands.
  * Updated decoding of clone3 syscall to match Linux 5.7.
  * Updated lists of BPF_*, BTRFS_*, CLONE_*, FAN_*, IORING_*, KVM_*,
    LWTUNNEL_*, MREMAP_*, PERF_*, SECCOMP_*, UFFDIO_*, V4L2_*, and XDP_*
    constants.
  * Updated lists of ioctl commands from Linux 5.7.

* Bug fixes
  * Fixed decoding of getdents and getdents64 syscalls when they return
    a lot of directory entries.
  * Fixed pathtrace matching of openat2 syscall.
  * Fixed build on systems without fork.

Noteworthy changes in release 5.6 (2020-04-07)
==============================================

* Changes in behaviour