@@ -536,6 +536,8 @@ EXTRA_DIST = \
 	strace-k.test \
 	strace-r.expected \
 	strace.supp \
+	straus_body.exp \
+	straus_head.exp \
 	sun_path.expected \
 	syntax.sh \
 	trace_clock.in \
