@@ -1,0 +1,26 @@
+    ]   |
+    |   [
+    [  ]
+   /   |        __
+  \|   |/     _/ /_
+ \ |   |//___/__/__/_
+\\  \ /  //    -____/_
+//   "   \\      \___.-
+ //     \\  __.----._/_
+/ //|||\\ .-         __>
+[        /         __.-
+[        [           }
+\        \          /
+ "-._____ \.____.--"
+    |  | |  |
+    |  | |  |
+    |  | |  |
+    |  | |  |
+    {  } {  }
+    |  | |  |
+    |  | |  |
+    |  | |  |
+    /  { |  |
+ .-"   / [   -._
+/___/ /   \ \___"-.
+    -"     "-
